@@ -198,6 +198,111 @@ void	CatalogDialog::searchChanged(const QString& newtext) {
 }
 
 /**
+ * \brief Handle dso catalog prefix searches
+ *
+ * \param prefix	prefix of the dso name
+ */
+void	CatalogDialog::textEditedDSO(const std::string& prefix) {
+	// get a the correct catalog
+	DeepSkyCatalogFactory	factory;
+	DeepSkyCatalogPtr	catalog;
+	switch (ui->catalogBox->currentIndex()) {
+	case 0:	catalog = factory.get(DeepSkyCatalogFactory::NGCIC);
+		break;
+	case 1:	catalog = factory.get(DeepSkyCatalogFactory::PGC);
+		break;
+	}
+
+	// retrieve names
+	std::set<std::string>	names = catalog->findLike(prefix);
+	if (names.size() == 0) {
+		return;
+	}
+
+	// prepare to fill the list with object names
+	QFont	font = QFontDatabase::systemFont(QFontDatabase::FixedFont);
+	ui->listWidget->setFont(font);
+	for (auto i = names.begin(); i != names.end(); i++) {
+		DeepSkyObject	dso = catalog->find(*i);
+		astro::RaDec	rd = dso.position(2000);
+		std::string	l = astro::stringprintf("%-20.20s|  %s %s  |  %s",
+			i->c_str(),
+			rd.ra().hms(':', 1).substr(1).c_str(),
+			rd.dec().dms(':', 0).c_str(),
+			DeepSkyObject::classification2string(dso.classification).c_str());
+
+		QListWidgetItem	*item = new QListWidgetItem(QString(l.c_str()));
+		item->setFont(font);
+		ui->listWidget->addItem(item);
+	}
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "found %d matching names",
+		names.size());
+}
+
+/**
+ * \brief Handle star catalog prefix searches
+ *
+ * \param prefix	prefix of the star name
+ */
+void	CatalogDialog::textEditedStars(const std::string& prefix) {
+	// handle star catalogs
+	astro::catalog::Catalog::starsetptr	stars;
+	try {
+		astro::catalog::CatalogFactory	factory;
+		astro::catalog::CatalogPtr	catalog;
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "getting stars for prefix %s",
+			prefix.c_str());
+		switch (ui->catalogBox->currentIndex()) {
+		case 0:
+		case 1:
+			break;
+		case 2:	catalog = factory.get(CatalogFactory::BSC);
+			break;
+		case 3:	catalog = factory.get(CatalogFactory::Hipparcos);
+			break;
+		case 4:	catalog = factory.get(CatalogFactory::Tycho2);
+			break;
+		case 5:	catalog = factory.get(CatalogFactory::Ucac4);
+			break;
+		}
+		stars = catalog->findLike(prefix);
+	} catch (const std::exception& x) {
+		debug(LOG_ERR, DEBUG_LOG, 0,
+			"cannot get stars from catalog %d: %s",
+				ui->catalogBox->currentIndex(), x.what());
+		return;
+	}
+
+	// make sure we have some stars
+	if (!stars) {
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "no stars returned");
+		return;
+	}
+	if (stars->size() == 0) {
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "no stars returned");
+		return;
+	}
+
+	// get the font
+	QFont	font = QFontDatabase::systemFont(QFontDatabase::FixedFont);
+	ui->listWidget->setFont(font);
+
+	// list the star entries
+	std::set<std::string>	starstrings = Catalog::starlist(stars);
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "%d star strings", starstrings.size());
+	QListWidget	*listWidget = ui->listWidget;
+	std::for_each(starstrings.begin(), starstrings.end(),
+		[listWidget,font](const std::string& s) mutable {
+			debug(LOG_DEBUG, DEBUG_LOG, 0, "adding %s", s.c_str());
+			QListWidgetItem	*item = new QListWidgetItem(
+				QString(s.c_str()));
+			item->setFont(font);
+			listWidget->addItem(item);
+		}
+	);
+}
+
+/**
  * \brief Slot called when the text in the search box changes
  *
  * This method considers the text in the search box a prefix and searches
@@ -214,60 +319,42 @@ void	CatalogDialog::textEdited(const QString& newtext) {
 	}
 	debug(LOG_DEBUG, DEBUG_LOG, 0, "search for prefix %s", prefix.c_str());
 	ui->listWidget->clear();
-	QFont	font = QFontDatabase::systemFont(QFontDatabase::FixedFont);
-	ui->listWidget->setFont(font);
 
 	// perform NGC catalog search
 	if (ui->catalogBox->currentIndex() < 2) {
-		DeepSkyCatalogFactory	factory;
-		DeepSkyCatalogPtr	catalog;
-		switch (ui->catalogBox->currentIndex()) {
-		case 0:	catalog = factory.get(DeepSkyCatalogFactory::NGCIC);
-			break;
-		case 1:	catalog = factory.get(DeepSkyCatalogFactory::PGC);
-			break;
-		}
-		std::set<std::string>	names = catalog->findLike(prefix);
-		for (auto i = names.begin(); i != names.end(); i++) {
-			DeepSkyObject	dso = catalog->find(*i);
-			astro::RaDec	rd = dso.position(2000);
-			std::string	l = astro::stringprintf("%-20.20s|  %s %s  |  %s",
-				i->c_str(),
-				rd.ra().hms(':', 1).substr(1).c_str(),
-				rd.dec().dms(':', 0).c_str(),
-				DeepSkyObject::classification2string(dso.classification).c_str());
-
-			QListWidgetItem	*item = new QListWidgetItem(QString(l.c_str()));
-			item->setFont(font);
-			ui->listWidget->addItem(item);
-		}
-		debug(LOG_DEBUG, DEBUG_LOG, 0, "found %d matching names",
-			names.size());
-		return;
+		textEditedDSO(prefix);
+	} else {
+		textEditedStars(prefix);
 	}
-
+	return;
+#if 0
 	// handle star catalogs
+	
 	astro::catalog::Catalog::starsetptr	stars;
 	try {
+		astro::catalog::CatalogFactory	factory;
+		astro::catalog::CatalogPtr	catalog;
 		debug(LOG_DEBUG, DEBUG_LOG, 0, "getting stars for prefix %s",
 			prefix.c_str());
 		switch (ui->catalogBox->currentIndex()) {
 		case 0:
 		case 1:
 			break;
-		case 2:	{
-			astro::catalog::CatalogFactory	factory;
-			astro::catalog::CatalogPtr	catalog
-				= factory.get(CatalogFactory::BSC);
-			stars = catalog->findLike(prefix);
-			}
+		case 2:	catalog = factory.get(CatalogFactory::BSC);
 			break;
-		case 3:
-		case 4:
-		case 5:
+		case 3:	catalog = factory.get(CatalogFactory::Hipparcos);
+			break;
+		case 4:	catalog = factory.get(CatalogFactory::Tycho2);
+			break;
+		case 5:	catalog = factory.get(CatalogFactory::Ucac4);
 			break;
 		}
+		stars = catalog->findLike(prefix);
 	} catch (const std::exception& x) {
+		debug(LOG_ERR, DEBUG_LOG, 0,
+			"cannot get stars from catalog %d: %s",
+				ui->catalogBox->currentIndex(), x.what());
+		return;
 	}
 
 	if (stars) {
@@ -288,6 +375,7 @@ void	CatalogDialog::textEdited(const QString& newtext) {
 	} else {
 		debug(LOG_DEBUG, DEBUG_LOG, 0, "no stars returned");
 	}
+#endif
 }
 
 /**
